--- a/index.html
+++ b/index.html
@@ -41,15 +41,26 @@
         <p><strong>Status Lojalności:</strong> Monitorowana Zgodność – Umiarkowane Poparcie</p>
         <hr>
         <h3>HISTORIA PODMIOTU:</h3>
-        <p>Podmiot wykazuje zgodność z wymogami Unii. Zarejestrowane działania:</p>
+        <p>Urodzony w 1983 roku w Berlinie, Adrian Kessler prowadził życie oparte na rutynie i ciężkiej pracy. Po Wojnie Siedmiogodzinnej dostosował się do realiów Unii, unikając działalności wywrotowej i wykazując zgodność z polityką administracyjną.</p>
+        <p>Monitorowanie wykazało, że podmiot podjął działania zgodne z interesami Unii, w tym współpracę z jednostkami Ochrony Cywilnej.</p>
+        <hr>
+        <h3>CZYNNIKI ZGODNOŚCI:</h3>
         <ul>
-            <li><a href="#">[LINK: CAM_FEED_0219B] - Zgłoszenie Dysydenta</a></li>
-            <li><a href="#">[LINK: AUDIO_LOG_76542] - Wywiad z Podmiotem</a></li>
+            <li>Współpraca z jednostkami patrolowymi Ochrony Cywilnej (**[LINK: CAM_FEED_0453D]**)</li>
+            <li>Unikanie grup antyobywatelskich</li>
+            <li>Udział w działaniach propagandowych zatwierdzonych przez Unię</li>
+        </ul>
+        <hr>
+        <h3>DODATKOWE NAGRANIA:</h3>
+        <ul>
+            <li><a href="#">[LINK: AUDIO_LOG_65432_INT1] - Nagranie Wywiadu</a></li>
             <li><a href="#">[LINK: CAM_FEED_0321C] - Współpraca z Ochroną Cywilną</a></li>
+            <li><a href="#">[LINK: CAM_FEED_0219B] - Zgłoszenie Dysydenta</a></li>
         </ul>
         <hr>
         <h3>STATUS REKOMENDACJI:</h3>
-        <p>Oczekuje na weryfikację...</p>
+        <p>Podmiot wykazuje zadowalającą historię zgodności. Oczekuje na zatwierdzenie...</p>
     </div>
 </body>
 </html>
+
